# ThreadX-FOTA

./: .editorconfig  .gitmodules  CMakeLists.txt  Makefile  README.md
application/: main.c
bootloader/: bootloader.c
cmake/: arm-none-eabi-toolchain.cmake
scripts/: prepare_target.py
source/: main.c
